replaced blurring with scrll prevention when mobile menu is up

--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,8 @@ a {
   display: none;
 }
 
-.isBlurred {
-  filter: blur(3px);
-  -webkit-filter: blur(3px);
+.isFixed {
+  position: fixed;
 }
 
 
